fix image stretch

--- a/src/components/Gallery/Gallery.css
+++ b/src/components/Gallery/Gallery.css
@@ -14,20 +14,16 @@
 }
 
 .gallery-area img {
-  max-width: 500px;
   max-height: 400px;
   box-shadow: 0 4px 8px rgba(15, 15, 15, 0.63);
   border-radius: 5px;
   margin: 0 16px;
   margin-bottom: 14px;
+  object-fit: contain;
 }
 
 .memoryfield-gallery {
   display: flex;
-}
-
-.memoryfield-gallery img {
-  max-width: 590px;
 }
 
 @media only screen and (max-width: 768px) {
